--- a/week12/Solved Exercise/bar-chart-finish.html
+++ b/week12/Solved Exercise/bar-chart-finish.html
@@ -1,16 +1,3 @@
-<!-- 	
-	Note: This example will only work if using a local server 
-	like XAMPP or node.js. Alternatively, the easy way is 
-	to use Live Server extension with VS Code:
-	https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer
-
-	If not using a local server, this will not work due to 
-	Cross-origin blocking of the json data file by the browser.
--->
-<!-- 
-    In this web page, we will fetch data from a local file
-	and create a chart on the page.
- -->
 <!DOCTYPE html>
 <html lang="en-CA">
 	<meta charset="UTF-8">
@@ -47,7 +34,9 @@
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function () {
-				$.getJSON("weather_data.json", generateWeatherChart); // get the JSON data from weather_data.json file and call the function generateWeatherChart
+				// get the JSON data from weather_data.json file and call the function generateWeatherChart
+				$.getJSON("weather_data.json", generateWeatherChart); 
+				
 			});
 			function generateWeatherChart(myJson) {
 				// declaring empty arrays to store labels and data for the chart
@@ -60,7 +49,8 @@
 				}
 				var ctx = document.getElementById('myChart').getContext('2d');
 				var chart = new Chart(ctx, {
-					type: 'bar', // creating a bar chart
+					// creating a bar chart
+					type: 'bar', 
 					data: {
 						labels: myLabels,
 						datasets: [
