--- a/Assignments/Classwork/gallery.html
+++ b/Assignments/Classwork/gallery.html
@@ -38,27 +38,27 @@
         <h2>Some of Our Happy Customers!</h2>
         <div class="photos">
             <figure class="clip1">
-                <img src="images/gallery/image1.jpg" alt="Orange Tulips in Gray Plant Pot">
+                <img src="images/image1.jpg" alt="Orange Tulips in Gray Plant Pot">
                 <figcaption>Orange Tulips in Gray Plant Pot</figcaption>
             </figure>
             <figure class="clip2">
-                <img src="images/gallery/image2.jpg" alt="Friends and Flowers">
+                <img src="images/image2.jpg" alt="Friends and Flowers">
                 <figcaption>Friends and Flowers</figcaption>
             </figure>
             <figure class="clip3">
-                <img src="images/gallery/image3.jpg" alt="Beautiful Red Rose">
+                <img src="images/image3.jpg" alt="Beautiful Red Rose">
                 <figcaption>Beautiful Red Rose</figcaption>
             </figure>
             <figure class="clip4">
-                <img src="images/gallery/image4.jpg" alt="Happy Elderly Couple">
+                <img src="images/image4.jpg" alt="Happy Elderly Couple">
                 <figcaption>Happy Elderly Couple</figcaption>
             </figure>
             <figure class="clip5">
-                <img src="images/gallery/image5.jpg" alt="Flowers, Vases and Studio">
+                <img src="images/image5.jpg" alt="Flowers, Vases and Studio">
                 <figcaption>Flowers, Vases and Studio</figcaption>
             </figure>
             <figure class="clip6">
-                <img src="images/gallery/image6.jpg" alt="Happy Times With a Bouquet of Flowers">
+                <img src="images/image6.jpg" alt="Happy Times With a Bouquet of Flowers">
                 <figcaption>Happy Times With a Bouquet of Flowers</figcaption>
             </figure>
         </div>
