--- a/week12/Exercise/datatable-finish.html
+++ b/week12/Exercise/datatable-finish.html
@@ -25,7 +25,7 @@
             margin:auto;
             border: 2px solid black;
             box-shadow: 0 0 10px grey;
-            padding: 20px;
+            padding: 10px;
             font-family: Arial, Helvetica, sans-serif;
         }
     </style>
@@ -49,13 +49,18 @@
 
 // this is the main function of the program
 function loadData(location) {
-    let apiEndPoint = 'https://mdn.github.io/learning-area/javascript/oojs/json/superheroes.json'; // data made available by MDN Web Docs
-    $.getJSON(apiEndPoint, displayTable); // get the JSON data from apiEndPoint and call the function displayTable
+    // data made available by MDN Web Docs
+    let apiEndPoint = 'https://mdn.github.io/learning-area/javascript/oojs/json/superheroes.json'; 
+    // get the JSON data from apiEndPoint and call the function displayTable
+    // $.getJSON(apiEndPoint, displayTable); 
+    $.getJSON("sample.json", displayTable); 
 }
 
 // callback function after fetching the JSON data from the apiEndPoint
 function displayTable(jsonResponse){
-    console.log(jsonResponse); // to check the data received
+
+    // to check the data received
+    console.log(jsonResponse); 
     // reading and adding the squad info to the page
     let squadInfo = `
         <h1>Squad Name: ${jsonResponse.squadName}</h1>
@@ -67,13 +72,17 @@ function displayTable(jsonResponse){
     document.getElementById('datawrapper').innerHTML = squadInfo;
 
     let superHeroes = '';
-    for(member of jsonResponse.members){ // looping through the members data
+
+    // looping through the members data
+    for(member of jsonResponse.members){ 
+
         // building a list of powers of each member
         let powers = `<ul>`;
         for(power of member.powers){
             powers += `<li>${power}</li>`;
         }
         powers += `</ul>`;
+
         // adding each member to the output
         superHeroes += `
             <tr>
